--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "winston": "^3.11.0"
