--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "winston": "^3.11.0"
+    "nodemon": "^3.1.0"
   }
 }
